--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body *|*:link {
 .inner-wrapper {
 	margin: 0 auto;
 	height: 100%;
-	width: 590px;
+	width: 618px;
 }
 
 #main_header h1 {
@@ -36,7 +36,7 @@ body *|*:link {
 #main_header .inner-wrapper {
 	padding-left: 110px;
 	background: url(pics/main_icon.png) 28px center no-repeat;
-	width: 560px;
+	width: 618px;
 	text-align: center;
 }
 
@@ -48,6 +48,10 @@ body *|*:link {
 	line-height: 40px;
 	font-size: 1.2em;
 	margin-top: 10px;
+}
+
+#main_header .phone.second {
+  margin-left: 25px;
 }
 
 #main_header .phone a {
@@ -216,6 +220,11 @@ footer {
 footer address {
   font-style: normal;
   padding-top: 1em;
+}
+
+a[href^="tel:"] {
+  color: #000;
+  text-decoration: none;
 }
 
 
